Las funciones lógicas estaban con notación de R en lugar de Python

--- a/Practicas/practica1-ldd-1c2024.tex
+++ b/Practicas/practica1-ldd-1c2024.tex
@@ -124,11 +124,11 @@ Realizar las siguientes operaciones básicas en Python.
 
 \item Interpretar las siguientes operaciones lógicas entre variables booleanas y predecir el resultado antes de probar en la consola.
 \begin{lstlisting}
-a = TRUE
-b = FALSE
-a == b
-a || b
-a == !b
+a = True
+b = False
+print(a == b)
+print(a or b)
+print(a == ~b)
 \end{lstlisting}
 
 \item Antes de probar en la consola, piense que van a dar estas operaciones:
