Modifique el ejercicio de archivos de datos
Lo volvi mas o menos como estaba antes (deje lo de cumsum), no quería usar mucho pandas todavia. Tal vez podemos pasarlo directamente a la practica 2 para verlo con pandas.

--- a/Practicas/practica1-ldd-1c2024.tex
+++ b/Practicas/practica1-ldd-1c2024.tex
@@ -360,17 +360,20 @@ Utilicen o modifiquen el siguiente código.
 import pandas as pd
 import matplotlib.pyplot as plt
 
+df = pd.read_csv("casos_coronavirus.csv") # dataFrame
+df.head()
 
-df = pd.read_csv("Datos/casos_coronavirus.csv")
 df.info()
-df["fecha"] = pd.to_datetime(df.fecha, format="%d-%m-%Y")
-casos = df.set_index("fecha").confirmados_Nuevos
 
-plt.plot(casos)
-plt.show()
-# Bonus: pueden rotar las etiquetas del eje X para que no se superpongan?
+# Convertimos los datos a np.array
+datosNP = df.to_numpy()
+print(datosNP)
 
-cum_casos = casos.cumsum()
+casos_diarios = datosNP[:,1]  # Nos quedamos con la segunda columna
+plt.plot(casos_diarios)
+
+# Calculamos la cantidad de casos acumulados con la funcion cumsum
+cum_casos = casos_diarios.cumsum()
 plt.plot(cum_casos)
 plt.show()
 
